Update Whatsapp Group link to use relative URL

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
         <h1> Python Heroes</h1>
 
         <p> Join our global Python learning community.</p>
-        <a href="wa.me/2348162043451"> Join Whatsapp Group</a>
+        <a href="/join"> Join Whatsapp Group</a>
         <p style="margin-top:20px; font-size:12px;"> Learn Python, Learn skills and Grow globally.</p>
 
     </div>
