Add logo image to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
 <body>
 
     <div class="box">
+        <img src="logo.png" alt="Python Heroes logo" />
         <h1> Python Heroes</h1>
 
         <p> Join our global Python learning community.</p>
